create local login using React Router

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,6 +12,7 @@
     "plugin:jsx-a11y/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
+    "prettier",
     "airbnb",
     "airbnb/hooks"
   ],
@@ -58,6 +59,15 @@
     "react/prop-types": 0,
     "import/no-unresolved": [2, { "caseSensitive": false }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-wrap-multilines": [
+      "error",
+      {
+        "declaration": "parens",
+        "assignment": "parens",
+        "return": "parens",
+        "arrow": "parens"
+      }
+    ],
     "import/order": [
       2,
       {
