--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,9 +1,10 @@
 {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "endOfLine": "crlf",
-    "printWidth": 80,
-    "tabWidth": 2,
-    "bracketSpacing": true
-  }
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "endOfLine": "crlf",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false
+}
