add models faceApi.js and install faceApi in package.json

--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.1",
+    "face-api.js": "^0.22.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
