add react-swipeable in package.json

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -56,6 +56,7 @@
     "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
+    "sx-one-expression-per-line": "off",
     "react/prop-types": 0,
     "import/no-unresolved": [2, { "caseSensitive": false }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
