--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "react-swipeable": "^7.0.2"
   }
 }
