--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,6 +6,7 @@ cryptography==44.0.2
 distlib==0.3.9
 Django==4.2
 django-appconf==1.1.0
+django-cors-headers==4.7.0
 django-cryptography==1.1
 django-filter==24.3
 djangorestframework==3.15.2
