--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -37,7 +37,9 @@
       "error",
       { "allowAfterThis": true, "allowAfterSuper": true }
     ],
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", { "tabWidth": 2 }],
+    "consistent-return": ["error", { "treatUndefinedAsUnspecified": true }],
+    "implicit-arrow-linebreak": "off",
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
@@ -53,6 +55,18 @@
       }
     ],
     "object-curly-newline": "off",
+    // Разрешаем переносы при деструктуризации
+    "operator-linebreak": [
+      "error",
+      "after",
+      {
+        "overrides": {
+          "=": "ignore" //, // Игнорируем переносы для оператора присваивания
+          // "?": "after", // Перенос после '?'
+          // ":": "after" // Перенос после ':'
+        }
+      }
+    ],
     "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
