--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -9,6 +9,7 @@ django-appconf==1.1.0
 django-cors-headers==4.7.0
 django-cryptography==1.1
 django-filter==24.3
+django-unfold==0.53.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.27.2
