--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 attrs==25.3.0
+black==25.1.0
 cffi==1.17.1
 cfgv==3.4.0
+click==8.1.8
 cryptography==44.0.2
 distlib==0.3.9
 Django==4.2
@@ -9,6 +11,10 @@ django-appconf==1.1.0
 django-cors-headers==4.7.0
 django-cryptography==1.1
 django-filter==24.3
+django-formtools==2.5.1
+django-otp==1.6.0
+django-phonenumber-field==8.0.0
+django-two-factor-auth==1.17.0
 django-unfold==0.53.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
@@ -19,9 +25,12 @@ inflection==0.5.1
 iniconfig==2.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+mypy-extensions==1.0.0
 nodeenv==1.9.1
 numpy==2.2.4
 packaging==24.2
+pathspec==0.12.1
+phonenumbers==9.0.2
 pillow==10.4.0
 platformdirs==4.3.6
 pluggy==1.5.0
@@ -29,10 +38,13 @@ pre-commit==3.6.0
 psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
+pyotp==2.9.0
+pypng==0.20220715.0
 pytest==8.3.4
 pytest-django==4.10.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+qrcode==7.4.2
 referencing==0.36.2
 rest-framework-simplejwt==0.0.2
 rpds-py==0.23.1
