--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,30 +1,48 @@
+amqp==5.3.1
+anyio==4.9.0
 asgiref==3.8.1
 attrs==25.3.0
+billiard==4.2.1
 black==25.1.0
+celery==5.5.1
+certifi==2025.1.31
 cffi==1.17.1
 cfgv==3.4.0
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cron-descriptor==1.4.5
 cryptography==44.0.2
 distlib==0.3.9
 Django==4.2
 django-appconf==1.1.0
+django-celery-beat==2.7.0
 django-cors-headers==4.7.0
 django-cryptography==1.1
 django-filter==24.3
 django-formtools==2.5.1
 django-otp==1.6.0
 django-phonenumber-field==8.0.0
+django-timezone-field==7.1
 django-two-factor-auth==1.17.0
 django-unfold==0.53.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.27.2
 filelock==3.18.0
+gevent==24.11.1
+greenlet==3.1.1
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 identify==2.6.9
+idna==3.10
 inflection==0.5.1
 iniconfig==2.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kombu==5.5.2
 mypy-extensions==1.0.0
 nodeenv==1.9.1
 numpy==2.2.4
@@ -35,6 +53,7 @@ pillow==10.4.0
 platformdirs==4.3.6
 pluggy==1.5.0
 pre-commit==3.6.0
+prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
@@ -42,13 +61,24 @@ pyotp==2.9.0
 pypng==0.20220715.0
 pytest==8.3.4
 pytest-django==4.10.0
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-telegram-bot==20.3
 PyYAML==6.0.2
 qrcode==7.4.2
+redis==5.2.1
 referencing==0.36.2
 rest-framework-simplejwt==0.0.2
 rpds-py==0.23.1
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
+tzdata==2025.2
 uritemplate==4.1.1
+vine==5.1.0
 virtualenv==20.29.3
+wcwidth==0.2.13
+zope.event==5.0
+zope.interface==7.2
