--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -12,8 +12,10 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+contourpy==1.3.1
 cron-descriptor==1.4.5
 cryptography==44.0.2
+cycler==0.12.1
 distlib==0.3.9
 Django==4.2
 django-appconf==1.1.0
@@ -30,7 +32,9 @@ django-unfold==0.53.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.27.2
+et_xmlfile==2.0.0
 filelock==3.18.0
+fonttools==4.57.0
 gevent==24.11.1
 greenlet==3.1.1
 h11==0.14.0
@@ -42,10 +46,12 @@ inflection==0.5.1
 iniconfig==2.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
 kombu==5.5.2
 mypy-extensions==1.0.0
 nodeenv==1.9.1
 numpy==2.2.4
+openpyxl==3.1.5
 packaging==24.2
 pathspec==0.12.1
 phonenumbers==9.0.2
@@ -58,6 +64,7 @@ psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 pyotp==2.9.0
+pyparsing==3.2.3
 pypng==0.20220715.0
 pytest==8.3.4
 pytest-django==4.10.0
