--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "date-fns": "^2.30.0",
     "face-api.js": "^0.22.2",
     "idb": "^8.0.2",
+    "node-forge": "^1.3.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
