--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -62,6 +62,7 @@ pre-commit==3.6.0
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 pycparser==2.22
+pycryptodome==3.22.0
 PyJWT==2.9.0
 pyotp==2.9.0
 pyparsing==3.2.3
