--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -73,6 +73,7 @@ python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-telegram-bot==20.3
+pytz==2025.2
 PyYAML==6.0.2
 qrcode==7.4.2
 redis==5.2.1
