--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -17,11 +17,12 @@ cron-descriptor==1.4.5
 cryptography==44.0.2
 cycler==0.12.1
 distlib==0.3.9
-Django==4.2
+Django==5.2.1
 django-appconf==1.1.0
 django-celery-beat==2.7.0
 django-cors-headers==4.7.0
 django-cryptography==1.1
+django-debug-toolbar==5.2.0
 django-filter==24.3
 django-formtools==2.5.1
 django-otp==1.6.0
