--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
